--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Software engineer based in Serbia. Curious about anything web related. I arrange pixels on the screen most of my time."
+    />
+    <title>Uroš Ignjatović 👋</title>
+    <link rel="preconnect" href="https://uploads-ssl.webflow.com">
   </head>
   <body>
     <div id="root"></div>
